# vms-fatmug

./: README.md  Readme.md  pyproject.toml
api/: admin.py  logics.py  models.py  serializers.py  signals.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_performance_date_and_more.py  0002_alter_purchaseorder_items.py  0003_alter_performance_avg_response_time.py  0003_alter_performance_fulfillment_rate_and_more.py  0004_alter_purchaseorder_quantity.py  0004_performance_quality_rating_avg.py  0005_alter_performance_quality_rating_avg.py  0005_alter_purchaseorder_quality_rating.py  0006_alter_performance_quality_rating_avg.py  0006_alter_purchaseorder_issue_date.py  0007_alter_performance_date.py  0007_alter_purchaseorder_issue_date.py  0008_alter_purchaseorder_issue_date.py  0009_alter_purchaseorder_issue_date_and_more.py  0010_alter_vendor_average_response_time.py  0011_alter_purchaseorder_acknowledgement_date_and_more.py  0012_alter_purchaseorder_acknowledgement_date_and_more.py  0013_alter_purchaseorder_acknowledgement_date.py  0014_alter_purchaseorder_acknowledgement_date.py  0015_alter_purchaseorder_acknowledgement_date.py  0016_alter_purchaseorder_acknowledgement_date.py  0017_alter_performance_avg_response_time_and_more.py  0018_alter_purchaseorder_acknowledgement_date_and_more.py  0019_alter_purchaseorder_acknowledgement_date_and_more.py  0020_alter_performance_date_and_more.py  0021_alter_purchaseorder_acknowledgement_date_and_more.py
api/tests/: test_endpoints.py  tests_models.py
vms/: settings.py  urls.py
